--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/givit_main
+spring.datasource.username=springstudent
+spring.datasource.password=springstudent
+
+# Enable schema generation
+spring.jpa.generate-ddl=true
+
+# Output the schema generation script to a file (optional)
+spring.batch.initialize-schema=always
+spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
+spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql
 
